# SwarmOptix

./: .gitignore  Architecture  README.md  pyproject.toml
src/warmoptix/: budget.py  cli.py  collision.py  init.py  orchestrator.py  router.py  server.py  types.py  utils.py
src/warmoptix/agents/: base.py  execution.py  init.py  sentiment.py
tests/: test_pipeline.py
