[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warmoptix"
version = "0.1.0"
description = "Modular swarm optimizer for multi-agent systems with load balancing, collision detection, and budget-based auto-scaling."
readme = "README.md"
authors = [{ name = "warmOptix authors" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/yourname/warmoptix"

[project.scripts]
warmoptix = "warmoptix.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
